# puzzle_game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  build_esp32.bat  log.h  make_solver.sh  misc.h  puzzle  puzzle.c  puzzle.h  puzzle_game.ino  puzzle_game.inoxxx  roll.c  solver.cpp  switches.h
data/: moves10_final.in  moves1_final.in  moves2_final.in  moves3_final.in  moves4_final.in  moves5_final.in  moves6_final.in  moves7_final.in  moves8_final.in  moves9_final.in
gui/: gui.c  gui.h
interfaces/: servo_switches.h
led_lines/: led_controller.c  led_controller.h  led_lines.h
roll/: roll.c  roll.h
rotary/: rotary.c  rotary.h
servo_controller/: servo_controller.c  servo_controller.h
src/: CMakeLists.txt  log.h  misc.c  misc.h  puzzle.c  puzzle.h  puzzle_game_pc.c
src/abstract_game/: puzzle.c  puzzle.h
src/gui/: gui.c  gui.h
src/interfaces/: servo_switches.c  servo_switches.h
src/led_controller/: led_controller.c  led_controller.h
src/mui/: leds_init.c  leds_init.h  mui.c  mui.cpp  mui.h
src/nixie_controller/: nixie_controller.c  nixie_controller.h
src/ota/: credentials.h
src/roll/: roll.c  roll.h
src/rotary/: rotary.c  rotary.h
src/servo_controller/: servo_controller.c  servo_controller.h
src/sound/: sound_module.c  sound_module.h  sound_module2.cpp  sound_module2.h
src/switches/: game_state.c  game_state.h  red_switches.h  switches.c  switches.h
src/time_display/: time_display.c  time_display.h
switches/: switches.c  switches.h
tools/: .gitignore  debug_solver.sh  make_solver.sh  moves10_final.in  moves1_final.in  moves2_final.in  moves3_final.in  moves4_final.in  moves5_final.in  moves6_final.in  moves7_final.in  moves8_final.in  moves9_final.in  numMovements.txt  validateFiles.sh
tools/map_builder/: solver.cpp  validateSolutionFiles.cpp
